<resources>
    <string name="app_name">The Movie DB</string>
    <!--<string name="movie_title">%1$s (%2$s)</string>-->
    <string name="movie_title">%1$s</string>
    <string name="movie_user_rating">User Rating : %1$s</string>
    <string name="movie_popularity">Popularity : %1$s</string>

    <string name="movie_info_overview">%1$s</string>
    <string name="movie_release_date">Release Date : %1$s</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="overview">Overview</string>
    <string name="reviews">Reviews</string>
    <string name="error_message_no_resource">An error has occurred while loading movies. Please try again later</string>
    <string name="no_favorites">Add your favorite movies here.</string>
    <string name="favorites">Favorites</string>
    <string name="trailers">Trailers</string>
    <string name="no_reviews_available_yet">No reviews available yet</string>
    <string name="no_trailers_available_yet">No Trailers available yet</string>
</resources>
